[gd_scene load_steps=17 format=3 uid="uid://c147mkn7gfruw"]

[ext_resource type="Script" path="res://scripts/user_interface/uiPartyManage.gd" id="1_11ial"]
[ext_resource type="StyleBox" uid="uid://bepui5u2c7sbt" path="res://design/BorderlessContiner.tres" id="2_yttj1"]
[ext_resource type="PackedScene" uid="uid://b0f85fb7fa5hj" path="res://scenes/user_interface/CustomButton.tscn" id="3_tdb45"]
[ext_resource type="Theme" uid="uid://c1j102ipq8685" path="res://design/ItemButtons.tres" id="4_0upo0"]
[ext_resource type="Texture2D" uid="uid://dkdxn0jh6oty0" path="res://images/sprites/icon_plus.png" id="5_3hpav"]
[ext_resource type="PackedScene" uid="uid://cm6aksgnbvl1o" path="res://scenes/user_interface/AttributeAdjust.tscn" id="6_vp4pm"]
[ext_resource type="PackedScene" uid="uid://507m3nw3cpie" path="res://scenes/user_interface/ProgressBarTrueValues.tscn" id="7_e8eca"]
[ext_resource type="PackedScene" uid="uid://d3kxw4js4bdau" path="res://scenes/user_interface/AttributeView.tscn" id="8_ggh3e"]
[ext_resource type="Theme" uid="uid://yo85ef7wg3gc" path="res://design/OutlinedLabel.tres" id="9_gflcs"]
[ext_resource type="Theme" uid="uid://drf46n866ot17" path="res://design/CombatButtons.tres" id="10_xo8de"]
[ext_resource type="PackedScene" uid="uid://cshiwdcttktbe" path="res://scenes/user_interface/CurrencyView.tscn" id="11_eqt0r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1jwo"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfwvc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ee64e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gup3p"]
bg_color = Color(0, 0, 0, 1)
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yg4ea"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="CharacterAdjust" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -20.0
offset_right = -88.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_11ial")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = -144.0
offset_top = -104.0
offset_right = 136.0
offset_bottom = 136.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k1jwo")

[node name="Abilities" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Abilities"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 294.0
offset_bottom = 128.0
follow_focus = true

[node name="VBoxContainer" type="GridContainer" parent="TabContainer/Abilities/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="DescriptionPanel" type="PanelContainer" parent="TabContainer/Abilities"]
layout_mode = 2
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 24.0
offset_right = 214.0
offset_bottom = 95.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_yttj1")

[node name="Label" type="RichTextLabel" parent="TabContainer/Abilities/DescriptionPanel"]
layout_mode = 2
bbcode_enabled = true
text = "This is the item description. FEAR IT'S GLORY!"

[node name="Charms" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bfwvc")

[node name="EquippedCharms" type="HFlowContainer" parent="TabContainer/Charms"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -73.0
offset_right = 46.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Weapon" parent="TabContainer/Charms/EquippedCharms" instance=ExtResource("3_tdb45")]
custom_minimum_size = Vector2(92, 0)
layout_mode = 2
theme = ExtResource("4_0upo0")
text = "WEAPON"

[node name="SlotA" parent="TabContainer/Charms/EquippedCharms" instance=ExtResource("3_tdb45")]
layout_mode = 2
theme = ExtResource("4_0upo0")
icon = ExtResource("5_3hpav")

[node name="SlotB" parent="TabContainer/Charms/EquippedCharms" instance=ExtResource("3_tdb45")]
layout_mode = 2
theme = ExtResource("4_0upo0")
icon = ExtResource("5_3hpav")

[node name="SlotC" parent="TabContainer/Charms/EquippedCharms" instance=ExtResource("3_tdb45")]
visible = false
layout_mode = 2
theme = ExtResource("4_0upo0")
icon = ExtResource("5_3hpav")

[node name="Panel" type="Panel" parent="TabContainer/Charms"]
layout_mode = 2
offset_left = 6.0
offset_top = 12.0
offset_right = 222.0
offset_bottom = 108.0
theme_override_styles/panel = ExtResource("2_yttj1")

[node name="SelectCharms" type="ScrollContainer" parent="TabContainer/Charms/Panel"]
custom_minimum_size = Vector2(7.866, 0)
layout_mode = 2
offset_right = 208.0
offset_bottom = 95.0
follow_focus = true

[node name="VBoxContainer" type="GridContainer" parent="TabContainer/Charms/Panel/SelectCharms"]
layout_mode = 2
columns = 6

[node name="Infomration" type="Control" parent="TabContainer/Charms"]
layout_mode = 3
anchors_preset = 0
offset_left = 192.0
offset_top = 48.0
offset_right = 232.0
offset_bottom = 88.0

[node name="GeneralInfo" type="RichTextLabel" parent="TabContainer/Charms/Infomration"]
z_index = 1
layout_mode = 2
offset_left = -186.0
offset_top = 140.0
offset_right = 30.0
offset_bottom = 162.0
bbcode_enabled = true
text = "[img]res://images/sprites/circle_filled.png[/img]"
fit_content = true
scroll_active = false

[node name="ItemInfo" type="PanelContainer" parent="TabContainer/Charms/Infomration"]
layout_mode = 2
offset_left = -186.0
offset_top = 60.0
offset_right = 30.0
offset_bottom = 148.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ee64e")

[node name="DescriptionLabel2" type="RichTextLabel" parent="TabContainer/Charms/Infomration/ItemInfo"]
layout_mode = 2
bbcode_enabled = true
text = "[center]LEFT CLICK TO USE ITEM
[/center]
"

[node name="Attributes" parent="TabContainer" instance=ExtResource("6_vp4pm")]
visible = false
layout_mode = 2

[node name="HBoxContainer" parent="TabContainer/Attributes" index="0"]
offset_left = -97.0
offset_top = -65.0
offset_right = 111.0
offset_bottom = 24.0

[node name="Available" parent="TabContainer/Attributes" index="1"]
offset_left = -97.0
offset_top = 23.0
offset_right = -3.0
offset_bottom = 36.0

[node name="Temperment" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Temperment"]
layout_mode = 2
offset_left = 54.0
offset_top = 12.0
offset_right = 230.0
offset_bottom = 116.0
alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="TabContainer/Temperment/VBoxContainer"]
layout_mode = 2
split_offset = 999
dragger_visibility = 1

[node name="HBoxContainer" type="VBoxContainer" parent="TabContainer/Temperment/VBoxContainer/HSplitContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Temperment/VBoxContainer/HSplitContainer/HBoxContainer"]
layout_mode = 2
text = "PRIMARY"

[node name="Label2" type="RichTextLabel" parent="TabContainer/Temperment/VBoxContainer/HSplitContainer/HBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "+20% GRIT
-10% BRAWN"
fit_content = true

[node name="RerollPrimary" parent="TabContainer/Temperment/VBoxContainer/HSplitContainer" instance=ExtResource("3_tdb45")]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
disabled = true
text = "REROLL"

[node name="HSplitContainer2" type="HSplitContainer" parent="TabContainer/Temperment/VBoxContainer"]
layout_mode = 2
split_offset = 999
dragger_visibility = 1

[node name="HBoxContainer" type="VBoxContainer" parent="TabContainer/Temperment/VBoxContainer/HSplitContainer2"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Temperment/VBoxContainer/HSplitContainer2/HBoxContainer"]
layout_mode = 2
text = "SECONDARY"

[node name="Label2" type="RichTextLabel" parent="TabContainer/Temperment/VBoxContainer/HSplitContainer2/HBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "+20% GRIT
-10% BRAWN"
fit_content = true

[node name="RerollSecondary" parent="TabContainer/Temperment/VBoxContainer/HSplitContainer2" instance=ExtResource("3_tdb45")]
layout_mode = 2
text = "REROLL"

[node name="ProgressBar" type="ProgressBar" parent="TabContainer/Temperment"]
layout_mode = 0
offset_left = 6.0
offset_top = 196.0
offset_right = 278.0
offset_bottom = 210.0
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
value = 50.0
show_percentage = false

[node name="ProgressBarTrueValues" parent="TabContainer/Temperment/ProgressBar" instance=ExtResource("7_e8eca")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -6.5
offset_right = 11.0
offset_bottom = 6.5

[node name="Label" type="Label" parent="TabContainer/Temperment/ProgressBar"]
layout_mode = 2
offset_top = -16.0
offset_right = 73.0
offset_bottom = -3.0
text = "Cost: 25"

[node name="AttributeView" parent="." instance=ExtResource("8_ggh3e")]
z_index = 1
layout_mode = 2
anchors_preset = 0
offset_left = 8.0
offset_top = 176.0
offset_right = 8.0
offset_bottom = 176.0
view_hidden = false

[node name="HiddenAttributes" parent="AttributeView" index="0"]
offset_left = 128.0
offset_top = -168.0
offset_right = 272.0
offset_bottom = -40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gup3p")

[node name="Attributes" parent="AttributeView" index="1"]
offset_left = 128.0
offset_top = -262.0
offset_right = 272.0
offset_bottom = -165.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yg4ea")

[node name="Debug" parent="AttributeView" index="2"]
offset_left = -224.0
offset_top = -96.0
offset_right = -64.0
offset_bottom = -14.0

[node name="Temperments" parent="AttributeView" index="3"]
visible = true
offset_left = 128.0
offset_top = -83.0
offset_right = 304.0
offset_bottom = -39.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -120.0
offset_top = 120.0
offset_right = 20.0
offset_bottom = 152.0
tooltip_text = "TSETSETSETSETRWARAWR"
theme = ExtResource("9_gflcs")
theme_override_font_sizes/font_size = 16
text = "MEMBER NAME"
vertical_alignment = 2

[node name="Marker2D" type="Marker2D" parent="Label"]
position = Vector2(-24, 16)

[node name="Infliction" type="Label" parent="."]
z_index = 8
layout_mode = 0
offset_left = 120.0
offset_top = -104.0
offset_right = 280.0
offset_bottom = -88.0
mouse_filter = 1
theme = ExtResource("9_gflcs")
text = "INFLICTED!"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ChangeFormation" parent="." instance=ExtResource("3_tdb45")]
visible = false
layout_mode = 1
offset_left = 136.0
offset_top = 136.0
offset_right = 280.0
offset_bottom = 160.0
theme = ExtResource("10_xo8de")
text = "CHANGE FORMATION"

[node name="Currency" parent="." instance=ExtResource("11_eqt0r")]
visible = false
layout_mode = 0
offset_left = 176.0
offset_top = 96.0
offset_right = 232.0
offset_bottom = 119.0

[node name="GetAllCombatants" type="Button" parent="."]
layout_mode = 0
offset_left = -136.0
offset_top = -128.0
offset_right = -24.0
offset_bottom = -106.0
text = "Get All Combatants"
alignment = 0

[connection signal="tab_changed" from="TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="focus_entered" from="TabContainer/Charms/EquippedCharms/Weapon" to="." method="_on_weapon_mouse_entered"]
[connection signal="mouse_entered" from="TabContainer/Charms/EquippedCharms/Weapon" to="." method="_on_weapon_mouse_entered"]
[connection signal="pressed" from="TabContainer/Charms/EquippedCharms/Weapon" to="." method="_on_weapon_pressed"]
[connection signal="focus_entered" from="TabContainer/Charms/EquippedCharms/SlotA" to="." method="_on_slot_a_mouse_entered"]
[connection signal="mouse_entered" from="TabContainer/Charms/EquippedCharms/SlotA" to="." method="_on_slot_a_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/Charms/EquippedCharms/SlotA" to="." method="hideItemDescription"]
[connection signal="pressed" from="TabContainer/Charms/EquippedCharms/SlotA" to="." method="_on_slot_a_pressed"]
[connection signal="focus_entered" from="TabContainer/Charms/EquippedCharms/SlotB" to="." method="_on_slot_b_mouse_entered"]
[connection signal="mouse_entered" from="TabContainer/Charms/EquippedCharms/SlotB" to="." method="_on_slot_b_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/Charms/EquippedCharms/SlotB" to="." method="hideItemDescription"]
[connection signal="pressed" from="TabContainer/Charms/EquippedCharms/SlotB" to="." method="_on_slot_b_pressed"]
[connection signal="focus_entered" from="TabContainer/Charms/EquippedCharms/SlotC" to="." method="_on_slot_c_mouse_entered"]
[connection signal="mouse_entered" from="TabContainer/Charms/EquippedCharms/SlotC" to="." method="_on_slot_c_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/Charms/EquippedCharms/SlotC" to="." method="hideItemDescription"]
[connection signal="pressed" from="TabContainer/Charms/EquippedCharms/SlotC" to="." method="_on_slot_c_pressed"]
[connection signal="pressed" from="TabContainer/Temperment/VBoxContainer/HSplitContainer/RerollPrimary" to="." method="_on_reroll_primary_pressed"]
[connection signal="pressed" from="TabContainer/Temperment/VBoxContainer/HSplitContainer2/RerollSecondary" to="." method="_on_reroll_secondary_pressed"]
[connection signal="pressed" from="ChangeFormation" to="." method="_on_change_formation_pressed"]
[connection signal="pressed" from="GetAllCombatants" to="." method="_on_get_all_combatants_pressed"]

[editable path="TabContainer/Attributes"]
[editable path="AttributeView"]
